<resources>
    <string name="app_name">Corporate Store</string>
    <string name="header">header</string>
    <string name="product_name">Product Name: </string>
    <string name="product_name_hint">Product Name</string>
    <string name="type">Type: </string>
    <string name="type_hint">Type</string>
    <string name="color">Color: </string>
    <string name="color_hint">Color </string>
    <string name="date">Date Received: </string>
    <string name="category">Category: </string>
    <string name="category_hint">Category </string>
    <string name="quantity">Quantity: </string>
    <string name="quantity_hint">Quantity </string>
    <string name="size">Size: </string>
    <string name="size_hint">Size </string>
    <string name="price">Price: </string>
    <string name="price_hint">Price </string>
    <string name="add_button_text">Add</string>
    <string name="section">Sections</string>
    <string name="serial_number">S/N</string>
    <string name="search_hint">Search…</string>
    <string name="search">Search</string>

    <string-array name="login_as">
        <item>Admin</item>
        <item>Sales Manager</item>
    </string-array>

    <string-array name="categories">
        <item>Single</item>
        <item>Double</item>
    </string-array>

    <string-array name="types">
        <item>LH</item>
        <item>FL</item>
        <item>MH</item>
        <item>HL</item>
        <item>Wedge</item>
        <item>Clogs</item>
    </string-array>

    <string-array name="double_section">
        <item>Bags and Shoes</item>
        <item>Bags and Slippers</item>
        <item>Bags and Hats</item>
        <item>Bags and Clothes</item>
    </string-array>

    <string-array name="single_section">
        <item>Bags</item>
        <item>Clothes</item>
        <item>Hats</item>
        <item>Jewelries</item>
        <item>Shoes</item>
        <item>Slippers</item>
    </string-array>

</resources>
