<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/serial_number"
        android:padding="5dp"
        android:gravity="center"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/product_name_hint"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/cart_items_product_name"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/type_hint"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/cart_items_type"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/size_hint"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/cart_items_size"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/color_hint"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/cart_items_color"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/price_hint"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/cart_items_price"/>

</LinearLayout>