<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/third_layout"
            android:layout_below="@+id/second_layout">

            <TextView
                android:layout_weight="4"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/product_name"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textColorHint="@color/transparent_red"
                android:id="@+id/product_name_text_input_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:theme="@style/EditText"
                    android:hint="@string/product_name_hint"
                    android:textColorHint="@color/transparent_red"
                    android:id="@+id/product_name"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/category"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <Spinner
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:id="@+id/category_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/second_layout"
            android:layout_below="@id/first_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/section"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <Spinner
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:id="@+id/section_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/third_layout"
            android:id="@+id/fourth_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/type"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <Spinner
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:id="@+id/type_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fourth_layout"
            android:id="@+id/fifth_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/color"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColorHint="@color/transparent_red"
                android:id="@+id/color_text_input_layout">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:id="@+id/color_edit_text"
                    android:inputType="text"
                    android:theme="@style/EditText"
                    android:hint="@string/color_hint"
                    android:textColorHint="@color/transparent_red"
                    android:completionThreshold="1"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifth_layout"
            android:id="@+id/sixth_layout"
            android:clickable="true">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/date"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:padding="10dp"
                android:id="@+id/date_received_text_view"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sixth_layout"
            android:id="@+id/seventh_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/quantity"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:id="@+id/quantity_text_input_layout"
                android:textColorHint="@color/transparent_red">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:id="@+id/quantity_edit_text"
                    android:theme="@style/EditText"
                    android:hint="@string/quantity_hint"
                    android:inputType="number"
                    android:textColorHint="@color/transparent_red"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seventh_layout"
            android:id="@+id/eight_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/size"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:id="@+id/size_text_input_layout"
                android:textColorHint="@color/transparent_red">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:id="@+id/size_edit_text"
                    android:theme="@style/EditText"
                    android:hint="@string/size_hint"
                    android:inputType="number"
                    android:textColorHint="@color/transparent_red"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eight_layout"
            android:id="@+id/ninth_layout">

            <TextView
                android:layout_weight="5"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/price"
                android:textColor="@android:color/holo_red_light"
                android:textSize="17sp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
