<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:padding="5dp"
                android:text="@string/app_name"
                android:gravity="center"
                android:fontFamily="serif-monospace"
                android:id="@+id/category_and_section_display"
                android:textStyle="bold"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_dots"
                android:background="@null"
                android:id="@+id/sales_popup_button"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bag_and_shoe"
                android:id="@+id/sales_point_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sales_point_type"
                android:text="@string/type_hint"
                android:textSize="15sp"
                android:padding="5dp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_toRightOf="@+id/sales_point_icon"
                android:layout_toEndOf="@+id/sales_point_icon"
                android:layout_above="@+id/sales_point_quantity"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/sales_point_size"
                android:text="@string/size_hint"
                android:layout_toRightOf="@+id/sales_point_icon"
                android:layout_toEndOf="@+id/sales_point_icon"
                android:textSize="15sp"
                android:padding="5dp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_above="@+id/sales_point_type"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sales_point_icon"
                android:layout_toEndOf="@+id/sales_point_icon"
                android:layout_above="@+id/sales_point_color"
                android:id="@+id/sales_point_quantity"
                android:padding="5dp"
                android:textSize="13sp"
                android:text="2"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sales_point_icon"
                android:layout_toEndOf="@+id/sales_point_icon"
                android:id="@+id/sales_point_color"
                android:layout_above="@+id/sales_point_date_received"
                android:padding="5dp"
                android:text="@string/color_hint"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="start"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sales_point_icon"
                android:layout_toEndOf="@+id/sales_point_icon"
                android:layout_alignBottom="@+id/sales_point_icon"
                android:padding="5dp"
                android:text="@string/date"
                android:gravity="start"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/sales_point_date_received"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="25sp"
            android:id="@+id/sales_point_name"
            android:text="@string/app_name"
            android:gravity="start|center_vertical"
            android:fontFamily="cursive"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.v7.widget.CardView>